--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2032,6 +2032,18 @@
   timestamp = {2022.06.22},
 }
 
+@InCollection{AnupamaKumar2020,
+  author    = {Anupama Kumar, S. and Vijayalakshmi, M. N. and Koppad, S. H. and Dharani, A.},
+  title     = {Narrative and Text Visualization: A Technique to Enhance Teaching Learning Process in Higher Education},
+  booktitle = {Data Visualization},
+  publisher = {Springer},
+  year      = {2020},
+  pages     = {1–13},
+  doi       = {10.1007/978-981-15-2282-6_1},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+}
+
 @InProceedings{Aone1995,
   author    = {Aone, C. and Bennett, S.},
   title     = {Evaluating Automated and Manual Acquisition of Anaphora Resolution Strategies},
@@ -2055,6 +2067,18 @@
   url       = {http://arxiv.org/abs/1511.01964},
 }
 
+@Article{Aparicio2022,
+  author    = {Aparicio, J. T. and Arsenio, E. and Henriques, R.},
+  title     = {Assessing robustness in multimodal transportation systems: a case study in Lisbon},
+  journal   = {European Transport Research Review},
+  year      = {2022},
+  volume    = {14},
+  pages     = {28},
+  doi       = {10.1186/s12544-022-00552-3},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+}
+
 @InProceedings{Aparicio2023,
   author    = {Aparicio, J. T. and Arsenio, E. and Henriques, R.},
   title     = {{tex2net}: A Package for Storytelling Using Network Models},
@@ -2064,6 +2088,20 @@
   doi       = {10.1145/3615335.3623022},
   owner     = {Vincent},
   timestamp = {2023.10.31},
+}
+
+@InProceedings{Aparicio2023a,
+  author    = {Aparicio, J. T. and Aparicio, M. and Costa, C. J.},
+  title     = {Design Science in Information Systems and Computing},
+  booktitle = {International Conference on Information Technology and Applications},
+  year      = {2023},
+  volume    = {614},
+  series    = {Lecture Notes in Networks and Systems},
+  pages     = {409-419},
+  publisher = {Springer},
+  doi       = {10.1007/978-981-19-9331-2_35},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
 }
 
 @Article{Aragon2008,
@@ -6466,6 +6504,19 @@
   url       = {http://www.clt.gu.se/beyond-synset-swesaurus-%E2%80%93-fuzzy-swedish-wordnet},
 }
 
+@Article{Borkin2013,
+  author    = {Borkin, M. A. and Vo, A. A. and Bylinskii, Z. and Isola, P. and Sunkavalli, S. and Oliva, A. and Pfister, H.},
+  title     = {What Makes a Visualization Memorable?},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2013},
+  volume    = {19},
+  number    = {12},
+  pages     = {2306-2315},
+  doi       = {10.1109/tvcg.2013.234},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+}
+
 @Article{Bornet2017,
   author    = {Bornet, C. and Kaplan, F.},
   title     = {A Simple Set of Rules for Characters and Place Recognition in French Novels},
@@ -6854,6 +6905,19 @@
   doi       = {10.1016/j.socnet.2012.07.003},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@Article{Boyack2010,
+  author    = {Boyack, K. W. and Klavans, R.},
+  title     = {Co‐citation analysis, bibliographic coupling, and direct citation: Which citation approach represents the research front most accurately?},
+  journal   = {Journal of the American Society for Information Science and Technology},
+  year      = {2010},
+  volume    = {61},
+  number    = {12},
+  pages     = {2389–2404},
+  doi       = {10.1002/asi.21419},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
 }
 
 @Book{Boyd1985,
@@ -8448,6 +8512,16 @@
   pages     = {1616-1637},
   doi       = {10.1109/TKDE.2018.2807452},
   timestamp = {2017.09.27},
+}
+
+@Book{Cairo2012,
+  title     = {The Functional Art: An introduction to information graphics and visualization},
+  publisher = {New Riders},
+  year      = {2012},
+  author    = {Cairo, A.},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+  url       = {https://books.google.fr/books?id=xwjhh6Wu-VUC},
 }
 
 @InProceedings{Calix2013,
@@ -13634,7 +13708,7 @@
 
 @Article{Diesner2005,
   author    = {Diesner, J. and Frantz, T. L. and Carley, K. M.},
-  title     = {Communication Networks from the Enron Email Corpus "It's Always About the People. Enron is no Different"},
+  title     = {Communication Networks from the {Enron} Email Corpus "It's Always About the People. {Enron} is no Different"},
   journal   = {Computational and Mathematical Organization Theory},
   year      = {2005},
   volume    = {11},
@@ -13643,6 +13717,17 @@
   doi       = {10.1007/s10588-005-5377-0},
   owner     = {Vincent},
   timestamp = {2019.03.24},
+}
+
+@InProceedings{Diesner2005a,
+  author    = {Diesner, J. and Carley, K. M.},
+  title     = {Exploration of communication networks from the {Enron} email corpus},
+  booktitle = {ICDM Workshop on Link Analysis, Counterterrorism and Security},
+  year      = {2005},
+  pages     = {3-14},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+  url       = {http://casos.cs.cmu.edu/publications/protected/2005-2006/diesner_2005_explorationsenron.pdf},
 }
 
 @InCollection{Diesner2011,
@@ -23288,6 +23373,16 @@
   timestamp = {2019.06.27},
 }
 
+@Book{Healy2018,
+  title     = {Data Visualization: A Practical Introduction},
+  publisher = {Princeton University Press},
+  year      = {2018},
+  author    = {Healy, K.},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+  url       = {https://press.princeton.edu/books/hardcover/9780691181615/data-visualization},
+}
+
 @Book{Heaney1999,
   title     = {Beowulf},
   publisher = {Faber and Faber},
@@ -26978,6 +27073,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.taylorfrancis.com/chapters/mono/10.4324/9780203091043-14/tragic-reappearance-racially-mixed-character-jay-prosser},
 }
 
+@Article{Jones2016,
+  author    = {Jones, N. N.},
+  title     = {Narrative Inquiry in Human-Centered Design: Examining Silence and Voice to Promote Social Justice in Design Scenarios},
+  journal   = {Journal of Technical Writing and Communication},
+  year      = {2016},
+  volume    = {46},
+  number    = {4},
+  pages     = {471–492},
+  doi       = {10.1177/0047281616653489},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+}
+
 @Article{Jones2018a,
   author    = {Jones, P.},
   title     = {Diana in the World of Men: a character network approach to analysing gendered vocal representation in Wonder Woman},
@@ -27237,6 +27345,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s11042-016-3682-x},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Jung2020,
+  author    = {Jung, H. and Lee, B. G.},
+  title     = {Research trends in text mining: Semantic network and main path analysis of selected journals},
+  journal   = {Expert Systems with Applications},
+  year      = {2020},
+  volume    = {162},
+  pages     = {113851},
+  doi       = {10.1016/j.eswa.2020.113851},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
 }
 
 @Article{JunSeongKim2014,
@@ -32671,6 +32791,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.14778/1687553.1687577},
   owner     = {Vincent},
   timestamp = {2011.06.20},
+}
+
+@Article{Leydesdorff2006,
+  author    = {Leydesdorff, L. and Vaughan, L.},
+  title     = {Co‐occurrence matrices and their applications in information science: Extending ACA to the Web environment},
+  journal   = {Journal of the American Society for Information Science and Technology},
+  year      = {2006},
+  volume    = {57},
+  number    = {12},
+  pages     = {1616–1628},
+  doi       = {10.1002/asi.20335},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
 }
 
 @Article{Leyerle1967,
@@ -41358,6 +41491,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {https://www.semanticscholar.org/paper/Sizing-up-the-Hoosier-Mental-Lexicon%3A-Measuring-the-Nusbaum/d0dfc5be92a49e9de8d819d0a6e1aa8484d9e250},
 }
 
+@Book{NussbaumerKnaflic2015,
+  title     = {Storytelling with Data: A Data Visualization Guide for Business Professionals},
+  publisher = {Wiley},
+  year      = {2015},
+  author    = {Nussbaumer Knaflic, C.},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+  url       = {https://www.oreilly.com/library/view/storytelling-with-data/9781119002253/},
+}
+
 @Book{Nutt1900,
   title     = {Cúchulainn, the Irish Achilles},
   publisher = {David Nutt},
@@ -42430,6 +42573,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3018661.3018731},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Article{Paranyushkin2011,
+  author    = {Paranyushkin, D.},
+  title     = {Identifying the pathways for meaning circulation using text network analysis},
+  journal   = {Venture Fiction Practices},
+  year      = {2011},
+  volume    = {2},
+  number    = {4},
+  pages     = {26},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+  url       = {https://noduslabs.com/wp-content/uploads/2012/04/Pathways-Meaning-Text-Network-Analysis.pdf},
 }
 
 @InProceedings{Pare2012,
@@ -59966,6 +60122,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2019.08.18},
 }
 
+@InProceedings{YturrizagaAguirre2022,
+  author    = {Yturrizaga-Aguirre, A. and Silva-Olivares, C. and Ugarte, W.},
+  title     = {Story visualization using image-text matching architecture for digital storytelling},
+  booktitle = {IEEE Engineering International Research Conference},
+  year      = {2022},
+  pages     = {1-4},
+  doi       = {10.1109/eircon56026.2022.9934817},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+}
+
 @Article{Yu2008,
   author    = {Yu, B.},
   title     = {An evaluation of text classification methods for literary study},
@@ -61024,6 +61191,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.08},
 }
 
+@Article{Zhi2019,
+  author    = {Zhi, Q. and Ottley, A. and Metoyer, R.},
+  title     = {Linking and Layout: Exploring the Integration of Text and Visualization in Storytelling},
+  journal   = {Computer Graphics Forum},
+  year      = {2019},
+  volume    = {38},
+  number    = {3},
+  pages     = {675–685},
+  doi       = {10.1111/cgf.13719},
+  owner     = {Vincent},
+  timestamp = {2023.11.26},
+}
+
 @Article{ZhitomirskyGeffet2018,
   author    = {Zhitomirsky-Geffet, M. and Prebor, G.},
   title     = {{SageBook}: Toward a cross-generational social network for the Jewish sages' prosopography},
@@ -61417,6 +61597,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.4028/www.scientific.net/amm.740.947},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@InProceedings{Zundert2023,
+  author    = {van Zundert, J. and van Cranenburgh, A. and Smeets, R.},
+  title     = {Putting {Dutchcoref} to the Test: Character Detection and Gender Dynamics in Contemporary Dutch Novels},
+  booktitle = {Computational Humanities Research Conference},
+  year      = {2023},
+  volume    = {3558},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {757-771},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://ceur-ws.org/Vol-3558/paper9264.pdf},
 }
 
 @Article{Zunshine2003,
