--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3578,6 +3578,16 @@
   timestamp = {2022.06.22},
 }
 
+@InProceedings{Barham2022,
+  author    = {Barham, P. and Chowdhery, A. and Dean, J. and Ghemawat, S. and Hand, S. and Hurt, D. and Isard, M. and Lim, H. and Pang, R. and Roy, S. and Saeta, B. and Schuh, P. and Sepassi, R. and El Shafey, L. and Thekkath, C. A. and Wu, Y.},
+  title     = {Pathways: Asynchronous Distributed Dataflow for ML},
+  booktitle = {5th Conference on Machine Learning and Systems},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://arxiv.org/abs/2203.12533},
+}
+
 @Book{Barnes1972,
   title     = {Social networks},
   publisher = {Addison-Wesley},
@@ -4946,6 +4956,19 @@
   doi       = {10.2307/3773626},
   owner     = {Vincent},
   timestamp = {2019.03.26},
+}
+
+@Article{Berners-Lee2001,
+  author    = {Berners-Lee, T. and Hendler, J. and Lassila, O.},
+  title     = {The Semantic Web},
+  journal   = {Scientific American},
+  year      = {2001},
+  volume    = {284},
+  number    = {5},
+  pages     = {34-43},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://www.jstor.org/stable/26059207},
 }
 
 @Article{Bernstein2017,
@@ -8646,6 +8669,19 @@
   owner     = {Vincent},
   timestamp = {2023.11.26},
   url       = {https://books.google.fr/books?id=xwjhh6Wu-VUC},
+}
+
+@Article{Caldeira2006,
+  author    = {Caldeira, S. M. G. and Petit Lobão, T. C. and Andrade, R. F. S. and Neme, A. and Miranda, J. G. V.},
+  title     = {The network of concepts in written texts},
+  journal   = {European Physical Journal B},
+  year      = {2006},
+  volume    = {49},
+  number    = {4},
+  pages     = {523–529},
+  doi       = {10.1140/epjb/e2006-00091-3},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
 }
 
 @InProceedings{Calix2013,
@@ -17489,6 +17525,17 @@
   timestamp = {2023.03.23},
 }
 
+@Book{Ferreira2020,
+  title     = {A Primer on Process Mining: Practical Skills with {Python} and {Graphviz}},
+  publisher = {Springer},
+  year      = {2020},
+  author    = {Ferreira, D. R.},
+  doi       = {10.1007/978-3-030-41819-9},
+  journal   = {SpringerBriefs in Information Systems},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+}
+
 @InProceedings{Ferrer2021,
   author    = {Ferrer, X. and van Nuenen, T. and Such, J. M. and Criado, N.},
   title     = {Discovering and categorising language biases in Reddit},
@@ -17523,6 +17570,19 @@
   doi       = {10.1103/physreve.69.051915},
   owner     = {Vincent},
   timestamp = {2019.04.03},
+}
+
+@Article{FerreriCancho2005,
+  author    = {Ferrer i Cancho, R.},
+  title     = {The variation of {Zipf}'s law in human language},
+  journal   = {European Physical Journal B},
+  year      = {2005},
+  volume    = {44},
+  number    = {2},
+  pages     = {249–257},
+  doi       = {10.1140/epjb/e2005-00121-8},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
 }
 
 @Article{FerreriCancho2010,
@@ -26703,6 +26763,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2021.12.27},
 }
 
+@Article{Jansen2023,
+  author    = {Jansen, B. J. and Jung, S.-G. and Salminen, J.},
+  title     = {Employing large language models in survey research},
+  journal   = {Natural Language Processing Journal},
+  year      = {2023},
+  volume    = {4},
+  pages     = {100020},
+  doi       = {10.1016/j.nlp.2023.100020},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+}
+
 @Article{Janssen2012,
   author    = {Janssen, J. and Hurshman, M. and Kalyaniwalla, N.},
   title     = {Model Selection for Social Networks Using Graphlets},
@@ -31361,6 +31433,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.routledge.com/Chopsticks-and-Gambling/Lam/p/book/9781138508149},
 }
 
+@Book{Lambert2010,
+  title     = {Graphviz},
+  publisher = {VDM Publishing},
+  year      = {2010},
+  author    = {Lambert, M. S. and Tennoe, M. T. and Henssonow, S. F.},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://books.google.fr/books/?id=SQlNYgEACAAJ},
+}
+
 @Article{Lambert2013,
   author    = {Lambert, N. M. and Stillman, T. F. and Hicks, J. A. and Kamble, S. and Baumeister, R. F. and Fincham, F. D.},
   title     = {To Belong Is to Matter: Sense of Belonging Enhances Meaning in Life},
@@ -31563,6 +31645,36 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2023.11.03},
   url       = {https://ela.kpi.ua/bitstream/123456789/61667/1/Lande_Str_Book.pdf},
+}
+
+@Article{Lande2023a,
+  author    = {Lande, D. and Strashnoy, L.},
+  title     = {Concept Networking Methods Based on {ChatGPT} \& {Gephi}},
+  journal   = {Social Science Research Network},
+  year      = {2023},
+  doi       = {10.2139/ssrn.4420452},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+}
+
+@Article{Lande2023b,
+  author    = {Lande, D. and Strashnoy, L.},
+  title     = {Hierarchical Formation of Causal Networks Based on {ChatGPT}},
+  journal   = {Social Science Research Network},
+  year      = {2023},
+  doi       = {10.2139/ssrn.4440629},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+}
+
+@Article{Lande2023c,
+  author    = {Lande, D. and Strashnoy, L.},
+  title     = {Causality Network Formation with {ChatGPT}},
+  journal   = {Social Science Research Network},
+  year      = {2023},
+  doi       = {10.2139/ssrn.4464477},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
 }
 
 @Article{Landesberger2011,
@@ -32630,6 +32742,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.06},
 }
 
+@Book{Lehmann1992,
+  title     = {Semantic networks in artificial intelligence},
+  publisher = {Pergamon Press},
+  year      = {1992},
+  author    = {Lehmann, F. and Rodin, E. Y.},
+  volume    = {24},
+  series    = {International series in modern applied mathematics and computer science},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://dl.acm.org/doi/abs/10.5555/541921},
+}
+
 @InProceedings{Lehnert1980,
   author    = {Lehnert, W. G.},
   title     = {Narrative Text Summarization},
@@ -32732,6 +32856,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1353/esp.2023.a906708},
   owner     = {Vincent},
   timestamp = {2023.09.16},
+}
+
+@Article{LeScao2022,
+  author    = {Le Scao, T. and Fan, A. and Akiki, C. and Pavlick, E. and Ilić, S. and Hesslow, D. and Castagné, R. and Luccioni, A. S. and Yvon, F. and Gallé, M. and Tow, J. and Rush, A. M. and Biderman, S. and Webson, A. and Ammanamanchi, P. S. and Wang, T. and Sagot, B. and Muennighoff, N. and Villanova del Moral, A. and Ruwase, O. and Bawden, R. and Bekman, S. and McMillan-Major, A. and Beltagy, I. and Nguyen, H. and Saulnier, L. and Tan, S. and Ortiz Suarez, P. and Sanh, V. and Laurençon, H. and Jernite, Y. and Launay, J. and Mitchell, M. and Raffel, C. and Gokaslan, A. and Simhi, A. and Soroa, A. and Fikri Aji, A. and Alfassy, A. and Rogers, A. and Kreisberg Nitzav, A. and Xu, C. and Mou, C. and Emezue, C. and Klamm, C. and Leong, C. and van Strien, D. and Ifeoluwa Adelani, D. and Radev, D. and González Ponferrada, E. and Levkovizh, E. and Kim, E. and Bar Natan, E. and De Toni, F. and Dupont, G. and Kruszewski, G. and Pistilli, G. and Elsahar, H. and Benyamina, H. and Tran, H. and Yu, I. and Abdulmumin, I. and Johnson, I. and Gonzalez-Dios, I. and de la Rosa, J. and Chim, J. and Dodge, J. and Zhu, J. and Chang, J. and Frohberg, J. and Tobing, J. and Bhattacharjee, J. and Almubarak, K. and Chen, K. and Lo, K. and Von Werra, L. and Weber, L. and Phan, L. and Ben Allal, L. and Tanguy, L. and Dey, M. and Romero Muñoz, M. and Masoud, M. and Grandury, M. and Šaško, M. and Huang, M. and Coavoux, M. and Singh, M. and Jiang, M. T.-J. and Vu, M. C. and Jauhar, M. A. and Ghaleb, M. and Subramani, N. and Kassner, N. and Khamis, N. and Nguyen, O. and Espejel, O. and de Gibert, O. and Villegas, P. and Henderson, P. and Colombo, P. and Amuok, P. and Lhoest, Q. and Harliman, R. and Bommasani, R. and López, R. L. and Ribeiro, R. and Osei, S. and Pyysalo, S. and Nagel, S. and Bose, S. and Muhammad, S. H. and Sharma, S. and Longpre, S. and Nikpoor, S. and Silberberg, S. and Pai, S. and Zink, S. and Timponi Torrent, T. and Schick, T. and Thrush, T. and Danchev, V. and Nikoulina, V. and Laippala, V. and Lepercq, V. and Prabhu, V. and Alyafeai, Z. and Talat, Z. and Raja, A. and Heinzerling, B. and Si, C. and Taşar, D. E. and Salesky, E. and Mielke, S. J. and Lee, W. Y. and Sharma, A. and Santilli, A. and Chaffin, A. and Stiegler, A. and Datta, D. and Szczechla, E. and Chhablani, G. and Wang, H. and Pandey, H. and Strobelt, H. and Fries, J. A. and Rozen, J. and Gao, L. and Sutawika, L. and Bari, M. S. and Al-shaibani, M. S. and Manica, M. and Nayak, N. and Teehan, R. and Albanie, S. and Shen, S. and Ben-David, S. and Bach, S. H. and Kim, T. and Bers, T. and Fevry, T. and Neeraj, T. and Thakker, U. and Raunak, V. and Tang, X. and Yong, Z. and Sun, Z. and Brody, S. and Uri, Y. and Tojarieh, H. and Roberts, A. and Chung, H. W. and Tae, J. and Phang, J. and Press, O. and Li, C. and Narayanan, D. and Bourfoune, H. and Casper, J. and Rasley, J. and Ryabinin, M. and Mishra, M. and Zhang, M. and Shoeybi, M. and Peyrounette, M. and Patry, N. and Tazi, N. and Sanseviero, O. and von Platen, P. and Cornette, P. and Lavallée, P. F. and Lacroix, R. and Rajbhandari, S. and Gandhi, S. and Smith, S. and Requena, S. and Patil, S. and Dettmers, T. and Baruwa, A. and Singh, A. and Cheveleva, A. and Ligozat, A. and Subramonian, A. and Névéol, A. and Lovering, C. and Garrette, D. and Tunuguntla, D. and Reiter, E. and Taktasheva, E. and Voloshina, E. and Bogdanov, E. and Winata, G. I. and Schoelkopf, H. and Kalo, J. and Novikova, J. and Zosa Forde, J. and Clive, J. and Kasai, J. and Kawamura, K. and Hazan, L. and Carpuat, M. and Clinciu, M. and Kim, N. and Cheng, N. and Serikov, O. and Antverg, O. and van der Wal, O. and Zhang, R. and Zhang, R. and Gehrmann, S. and Mirkin, S. and Pais, S. and Shavrina, T. and Scialom, T. and Yun, T. and Limisiewicz, T. and Rieser, V. and Protasov, V. and Mikhailov, V. and Pruksachatkun, Y. and Belinkov, Y. and Bamberger, Z. and Kasner, Z. and Rueda, A. and Pestana, A. and Feizpour, A. and Khan, A. and Faranak, A. and Santos, A. and Hevia, A. and Unldreaj, A. and Aghagol, A. and Abdollahi, A. and Tammour, A. and HajiHosseini, A. and Behroozi, B. and Ajibade, B. and Saxena, B. and Muñoz Ferrandis, C. and McDuff, D. and Contractor, D. and Lansky, D. and David, D. and Kiela, D. and Nguyen, D. A. and Tan, E. and Baylor, E. and Ozoani, E. and Mirza, F. and Ononiwu, F. and Rezanejad, H. and Jones, H. and Bhattacharya, I. and Solaiman, I. and Sedenko, I. and Nejadgholi, I. and Passmore, J. and Seltzer, J. and Bonis Sanz, J. and Dutra, L. and Samagaio, M. and Elbadri, M. and Mieskes, M. and Gerchick, M. and Akinlolu, M. and McKenna, M. and Qiu, M. and Ghauri, M. and Burynok, M. and Abrar, N. and Rajani, N. and Elkott, N. and Fahmy, N. and Samuel, O. and An, R. and Kromann, R. and Hao, R. and Alizadeh, S. and Shubber, S. and Wang, S. and Roy, S. and Viguier, S. and Le, T. and Oyebade, T. and Le, T. and Yang, Y. and Nguyen, Z. and Ramesh Kashyap, A. and Palasciano, A. and Callahan, A. and Shukla, A. and Miranda-Escalada, A. and Singh, A. and Beilharz, B. and Wang, B. and Brito, C. and Zhou, C. and Jain, C. and Xu, C. and Fourrier, C. and León Periñán, D. and Molano, D. and Yu, D. and Manjavacas, E. and Barth, F. and Fuhrimann, F. and Altay, G. and Bayrak, G. and Burns, G. and Vrabec, H. U. and Bello, I. and Dash, I. and Kang, J. and Giorgi, J. and Golde, J. and Posada, J. D. and Rangasai Sivaraman, K. and Bulchandani, L. and Liu, L. and Shinzato, L. and Hahn de Bykhovetz, M. and Takeuchi, M. and Pàmies, M. and Castillo, M. A. and Nezhurina, M. and Sänger, M. and Samwald, M. and Cullan, M. and Weinberg, M. and De Wolf, M. and Mihaljcic, M. and Liu, M. and Freidank, M. and Kang, M. and Seelam, N. and Dahlberg, N. and Michio Broad, N. and Muellner, N. and Fung, P. and Haller, P. and Chandrasekhar, R. and Eisenberg, R. and Martin, R. and Canalli, R. and Su, R. and Su, R. and Cahyawijaya, S. and Garda, S. and Deshmukh, S. S. and Mishra, S. and Kiblawi, S. and Ott, S. and Sang-aroonsiri, S. and Kumar, S. and Schweter, S. and Bharati, S. and Laud, T. and Gigant, T. and Kainuma, T. and Kusa, W. and Labrak, Y. and Shailesh Bajaj, Y. and Venkatraman, Y. and Xu, Y. and Xu, Y. and Xu, Y. and Tan, Z. and Xie, Z. and Ye, Z. and Bras, M. and Belkada, Y. and Wolf, T.},
+  title     = {{BLOOM}: A 176B-Parameter Open-Access Multilingual Language Model},
+  journal   = {arXiv},
+  year      = {2022},
+  volume    = {cs.CL},
+  pages     = {2211.05100},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://arxiv.org/abs/2211.05100},
 }
 
 @TechReport{LeseleucdeKerouara2020,
@@ -38938,6 +39074,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {https://sites.lsa.umich.edu/mizruchi/books/the-american-corporate-network/},
+}
+
+@InProceedings{Mnih2016,
+  author    = {Mnih, V. and Puigdomenech Badia, A. and Mirza, M. and Graves, A. and Lillicrap, T. and Harley, T. and Silver, D. and Kavukcuoglu, K.},
+  title     = {Asynchronous Methods for Deep Reinforcement Learning},
+  booktitle = {33rd International Conference on Machine Learning},
+  year      = {2016},
+  volume    = {48},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {1928-1937},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://proceedings.mlr.press/v48/mniha16.html},
 }
 
 @Article{Moattar2012,
@@ -45467,6 +45616,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://eric.ed.gov/?id=EJ1050665},
 }
 
+@Article{Raffel2020,
+  author    = {Raffel, C. and Shazeer, N. and Roberts, A. and Lee, K. and Narang, S. and Matena, M. and Zhou, Y. and Li, W. and Liu, P. J.},
+  title     = {Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2020},
+  volume    = {21},
+  number    = {140},
+  pages     = {1-67},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://jmlr.org/papers/v21/20-074.html},
+}
+
 @InProceedings{Raghavan1999,
   author    = {Raghavan, P. and Henzinger, M.},
   title     = {Computing on data streams},
@@ -50324,6 +50486,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@Book{Segev2022,
+  title     = {Semantic Network Analysis in Social Sciences},
+  publisher = {Routledge},
+  year      = {2022},
+  author    = {Segev, E.},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://www.routledge.com/Semantic-Network-Analysis-in-Social-Sciences/Segev/p/book/9780367636524},
+}
+
 @Article{Seidman1981,
   author    = {Seidman, S. A.},
   title     = {On the contributions of music to media productions},
@@ -50845,6 +51017,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/2102.07200},
 }
 
+@Article{Sheikh2023,
+  author    = {Sheikh, S. J. and Haider, S. and Levis, A. H.},
+  title     = {On semi-automated extraction of causal networks from raw text},
+  journal   = {Engineering Applications of Artificial Intelligence},
+  year      = {2023},
+  volume    = {123},
+  pages     = {106189},
+  doi       = {10.1016/j.engappai.2023.106189},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+}
+
 @Article{Shen2017,
   author    = {Shen, J. and Zhou, T. and Lai, C.-F. and Li, J. and Li, X.},
   title     = {Hierarchical trust level evaluation for pervasive social networking},
@@ -51188,6 +51372,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Article{Sigman2002,
+  author    = {Sigman, M. and Cecchi, G. A.},
+  title     = {Global organization of the Wordnet lexicon},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2002},
+  volume    = {99},
+  number    = {3},
+  pages     = {1742–1747},
+  doi       = {10.1073/pnas.022341799},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+}
+
 @Article{Signorielli1989,
   author    = {Signorielli, N.},
   title     = {Television and conceptions about sex roles: Maintaining conventionality and the status quo},
@@ -51388,6 +51585,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2023.03.23},
   url       = {https://arxiv.org/abs/1410.4876},
+}
+
+@Article{Silver2016,
+  author    = {Silver, D. and Huang, A. and Maddison, C. J. and Guez, A. and Sifre, L. and van den Driessche, G. and Schrittwieser, J. and Antonoglou, I. and Panneershelvam, V. and Lanctot, M. and Dieleman, S. and Grewe, D. and Nham, J. and Kalchbrenner, N. and Sutskever, I. and Lillicrap, T. and Leach, M. and Kavukcuoglu, K. and Graepel, T. and Hassabis, D.},
+  title     = {Mastering the game of Go with deep neural networks and tree search},
+  journal   = {Nature},
+  year      = {2016},
+  volume    = {529},
+  number    = {7587},
+  pages     = {484–489},
+  doi       = {10.1038/nature16961},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
 }
 
 @Article{Silver2023,
@@ -52324,6 +52534,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://www.reddit.com/r/dataisbeautiful/comments/8ikpap/oc_graphing_the_character_interactions_from_the/},
   owner        = {Vincent},
   timestamp    = {2018.05.12},
+}
+
+@InCollection{Sowa1987,
+  author    = {Sowa, J. F.},
+  title     = {Semantic Networks},
+  booktitle = {Encyclopedia of Artificial Intelligence},
+  publisher = {Wiley},
+  year      = {1987},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://books.google.fr/books/?id=v1NVxQEACAAJ},
 }
 
 @Book{Spacks1985,
@@ -53719,6 +53940,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/bigdatacongress.2015.17},
   owner     = {Vincent},
   timestamp = {2019.12.31},
+}
+
+@InProceedings{Sussna1993,
+  author    = {Sussna, M.},
+  title     = {Word sense disambiguation for free-text indexing using a massive semantic network},
+  booktitle = {2nd international conference on Information and knowledge management},
+  year      = {1993},
+  pages     = {67-74},
+  doi       = {10.1145/170088.170106},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
 }
 
 @Article{Sutherland2016,
@@ -60247,6 +60479,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://repository.wellesley.edu/object/ir1788},
 }
 
+@Article{Yang2023,
+  author    = {Yang, J. and Jin, H. and Tang, R. and Han, X. and Feng, Q. and Jiang, H. and Yin, B. and Hu, X.},
+  title     = {Harnessing the Power of {LLM}s in Practice: A Survey on {ChatGPT} and Beyond},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.CL},
+  pages     = {2304.13712},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://arxiv.org/abs/2304.13712},
+}
+
 @Article{Yao2019,
   author    = {Yao, L. and Mao, C. and Luo, Y.},
   title     = {KG-BERT: BERT for Knowledge Graph Completion},
@@ -61702,6 +61946,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.05.14},
 }
 
+@Article{Zhao2023,
+  author        = {Zhao, W. X. and Zhou, K. and Li, J. and Tang, T. and Wang, X. and Hou, Y. and Min, Y. and Zhang, B. and Zhang, J. and Dong, Z. and Du, Y. and Yang, C. and Chen, Y. and Chen, Z. and Jiang, J. and Ren, R. and Li, Y. and Tang, X. and Liu, Z. and Liu, P. and Nie, J.-Y. and Wen, J.-R.},
+  title         = {A Survey of Large Language Models},
+  journal       = {arXiv},
+  year          = {2023},
+  volume        = {cs.CL},
+  pages         = {2303.18223},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2023.04.08},
+  url           = {https://arxiv.org/abs/2303.18223},
+}
+
 @InProceedings{Zheleva2009,
   author    = {Zheleva, E. and Getoor, L.},
   title     = {To join or not to join: the illusion of privacy in social networks with mixed public and private user profiles},
@@ -62010,6 +62267,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/d19-1531},
   owner     = {Vincent},
   timestamp = {2022.06.29},
+}
+
+@Article{Zhou2023,
+  author    = {Zhou, C. and Li, Q. and Li, C. and Yu, J. and Liu, Y. and Wang, G. and Zhang, K. and Jin, C. and Yan, Q. and He, L. and Peng, H. and Li, J. and Wu, J. and Liu, Z. and Xie, P. and Xiong, C. and Pei, J. and Yu, P. S. and Sun, L.},
+  title     = {A comprehensive survey on pretrained foundation models},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.AI},
+  pages     = {2302.09419},
+  owner     = {Vincent},
+  timestamp = {2023.11.29},
+  url       = {https://arxiv.org/abs/2302.09419},
 }
 
 @InProceedings{Zhu2003,
